--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.apache.kafka:kafka-clients:3.5.0'
 	implementation 'redis.clients:jedis:3.8.0'
 	testImplementation "org.junit.jupiter:junit-jupiter:5.8.1"
 	testImplementation "org.testcontainers:testcontainers:1.18.3"
